adding admin intializer class